--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
             <h1>Login</h1>
             <form>
                 <label for="username">Nome de Usuario:</label>
-                <input type="text" id="username" name="username">
+                <input type="text" id="username" name="username">]
+                <label for="email">E-mail:</label>
+                <input type="text" id="email" name="email">
                 <label for="password">Senha:</label>
                 <input type="password" id="password" name="password">
                 <input type="submit" valeu="Entrar">
