--- a/vscode/login.html
+++ b/vscode/login.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <h1>Login</h1>
-            <form action="home.html" method="post">
+            <form method="post" action="home.html">
                 <label for="username">Nome de Usuario:</label>
                 <input placeholder="Usuario" type="text" id="username" name="username">
                 <label for="password">Senha:</label>
