--- a/vscode/login.html
+++ b/vscode/login.html
@@ -15,5 +15,6 @@
                 <input type="submit" valeu="Entrar">
             </form>
         </div>
+        <div class="rodape">Copyright &copy 2023</div>
     </body>
 </html>
