--- a/vscode/cadastro.html
+++ b/vscode/cadastro.html
@@ -17,5 +17,6 @@
                 <input type="submit" value="Entrar">
             </form>
         </div>
+        <div class="rodape">Copyright &copy 2023</div>
     </body>
 </html>
