--- a/vscode/cadastro.html
+++ b/vscode/cadastro.html
@@ -8,7 +8,7 @@
         <div class="container">
             <h1>Cadastro</h1>
             <form action="home.html" method="post">
-                <label for="username">Usuario:</label>
+                <label for="username">Nome de Usuario:</label>
                 <input placeholder="Usuario" type="text" id="username" name="username">
                 <label for="email">E-mail:</label>
                 <input placeholder="E-mail" type="text" id="email" name="email">
