--- a/vscode/login.html
+++ b/vscode/login.html
@@ -12,7 +12,7 @@
                 <input placeholder="Usuario" type="text" id="username" name="username">
                 <label for="password">Senha:</label>
                 <input placeholder="Senha" type="password" id="password" name="password">
-                <input type="submit" valeu="Entrar">
+                <input type="submit" value="Entrar">
             </form>
         </div>
         <div class="rodape">Copyright &copy 2023</div>
