--- a/vscode/cadastro.html
+++ b/vscode/cadastro.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pagina de Cadastro</title>
-        <link rel="stylesheet" type="text/css" href="stylecadastro.css">
+        <meta charset="UTF-8">
+        <link href="stylecadastro.css" rel="stylesheet">
+        <title>Cadastro</title>
     </head>
     <body>
-        <div class="container">
-            <h1>Cadastro</h1>
-            <form action="home.html" method="post">
-                <label for="username">Nome de Usuario:</label>
-                <input placeholder="Usuario" type="text" id="username" name="username">
-                <label for="email">E-mail:</label>
-                <input placeholder="E-mail" type="text" id="email" name="email">
-                <label for="password">Senha:</label>
-                <input placeholder="Senha" type="password" id="password" name="password">
-                <input type="submit" value="Entrar">
-            </form>
-        </div>
-        <div class="rodape">Copyright &copy 2023</div>
+        <section>
+            <div class="form-box">
+                <div class="form-value">
+                    <form action="home.html">
+                        <h2>Cadastro</h2>
+                        <div class="inputbox">
+                            <ion-icon name="mail-outline"></ion-icon>
+                            <input type="email" required>
+                            <label for="">E-mail</label>
+                        </div>
+                        <div class="inputbox">
+                            <ion-icon name="person-outline"></ion-icon>
+                            <input type="username" required>
+                            <label for="">Nome de Usuário</label>
+                        </div>
+                        <div class="inputbox">
+                            <ion-icon name="lock-closed-outline"></ion-icon>
+                            <input type="password" required>
+                            <label for="">Senha</label>
+                        </div>
+                        <button>Cadastrar</button>
+                        <div class="register">
+                            <p>Já Possui uma Conta? <a href="login.html">Logar-se</a></p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script>
+            const form = document.querySelector('form');
+            form.addEventListener('submit', (event) => {
+                event.preventDefault();
+                window.location.href = form.action;
+            });
+        </script>
+        
     </body>
 </html>
