--- a/vscode/home.html
+++ b/vscode/home.html
@@ -1,35 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="stylehome.css" rel="stylesheet">
-    <title>Pagina Home</title>
+	<meta charset="utf-8">
+	<title>Cine Nog</title>
+	<link rel="stylesheet" type="text/css" href="stylehome.css">
 </head>
-
 <body>
-    <header>
-        <script>
-            const params = new URLSearchParams(window.location.search);
-            const username = params.get('username');
-            const password = params.get('password');
-
-            if (username && password) {
-                alert(`Bem-vindo(a), ${username}!`)
-            }
-        </script>
-        <img src="logo.png" class="logo">
-        <ul>
-            <li>Home</li>
-            <li>Serviços</li>
-            <li>Quem Somos</li>
-            <li>Contato</li>
-        </ul>
-        <div class="logincadastro">
-            <p><a href="login.html">Login</a></p> <p>|</p> <p><a href="cadastro.html">Cadastro </a></p>
-        </div>
-    </header>
-    <div class="conteudo"></div>
-    <div class="rodape">Copyright &copy 2023</div>
+	<header>
+		<div class="logo">Cinema Nog</div>
+		<nav>
+			<ul>
+				<li><a href="#"><strong>FILMES EM CARTAZ</strong></a></li>
+				<li><a href="#"><strong>INGRESSOS E PREÇOS</strong></a></li>
+				<li><a href="#"><strong>LOCAIS E HORÁRIOS</strong></a></li>
+				<li><a href="#"><strong>MINHA CONTA</strong></a></li>
+				<li><a href="#"><strong>SOBRE NÓS</strong></a></li>
+                <li><a href="#"><strong>CARTÃO PRESENTE</strong></a></li>
+				<li><a href="login.html"><strong>LOGOUT</strong></a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<div class="banner">
+			<img src="mario.jpeg" alt="Filmes em cartaz">
+		</div>
+		<section class="horarios">
+			<h2>PROGRAMAÇÃO</h2>
+            <p>A gente tenta não alterar mas, se acontecer alguma coisa importante, essa programação pode mudar! Fique ligad​o.</p>
+			<ul>
+				<li>
+					<h3>SUPER MARIO BROS.</h3>
+					<p>Classificação: Livre</p>
+					<p>Duração: 1h32min</p>
+					<ul>
+						<li>SALA 1<br><br>14:00 | 16:00 | 18:00</li>
+						<li>SALA 2<br><br>15:00 | 17:00 | 19:00</li>
+					</ul>
+					<button>Comprar ingressos</button>
+				</li>
+				<li>
+					<h3>JOHN WICK 4: BABA YAGA</h3>
+					<p>Classificação: 16 anos</p>
+					<p>Duração: 2h49min</p>
+					<ul>
+						<li>SALA 3<br><br>20:30</li>
+						<li>SALA 5<br><br>16:30 | 20:00</li>
+					</ul>
+					<button>Comprar ingressos</button>
+				</li>
+                <li>
+					<h3>SHAZAM! FÚRIA DOS DEUSES</h3>
+					<p>Classificação: 12 anos</p>
+					<p>Duração: 2h10min</p>
+					<ul>
+						<li>SALA 5<br><br>14:00</li>
+					</ul>
+					<button>Comprar ingressos</button>
+				</li>
+                <li>
+					<h3>O EXORCISTA DO PAPA</h3>
+					<p>Classificação: 16 anos</p>
+					<p>Duração: 1h43min</p>
+					<ul>
+						<li>SALA 1<br><br>22:00</li>
+						<li>SALA 4<br><br>14:30 | 16:45 | 21:45</li>
+					</ul>
+					<button>Comprar ingressos</button>
+				</li>
+			</ul>
+		</section>
+	</main>
+    <br><br>
+	<footer>
+		<div class="endereco">Utilizamos seus dados para analisar e personalizar nossos conteúdos e anúncios durante a sua navegação em nosso site e em serviços de terceiros parceiros.</div>
+        <div class="telefone">Telefone: (21) 4002-8922 | E-mail: contado@cinenog.com</div>
+        <div class="rodape"><strong>Copyright &copy 2023</strong></div>
+	</footer>
 </body>
+</html>
