--- a/vscode/login.html
+++ b/vscode/login.html
@@ -12,7 +12,7 @@
                     <form action="home.html">
                         <h2>Login</h2>
                         <div class="inputbox">
-                            <ion-icon name="mail-outline"></ion-icon>
+                            <ion-icon name="person-outline"></ion-icon>
                             <input type="username" required>
                             <label for="">Nome de Usuário</label>
                         </div>
