--- a/vscode/home.html
+++ b/vscode/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<div class="logo">Cinema Nog</div>
+		<div class="logo">CINE NOG</div>
 		<nav>
 			<ul>
 				<li><a href="#"><strong>FILMES EM CARTAZ</strong></a></li>
@@ -22,21 +22,23 @@
 	</header>
 	<main>
 		<div class="banner">
-			<img src="mario.jpeg" alt="Filmes em cartaz">
+			<h2>DESTAQUE DA SEMANA</h2>
+			<p>O REINO DOS COGUMELOS ESTÁ EM PERIGO!</p>
+			<img src="mario.jpeg">
 		</div>
 		<section class="horarios">
 			<h2>PROGRAMAÇÃO</h2>
             <p>A gente tenta não alterar mas, se acontecer alguma coisa importante, essa programação pode mudar! Fique ligad​o.</p>
 			<ul>
 				<li>
-					<h3>SUPER MARIO BROS.</h3>
+					<h3>SUPER MARIO BROS.: O FILME</h3>
 					<p>Classificação: Livre</p>
 					<p>Duração: 1h32min</p>
 					<ul>
 						<li>SALA 1<br><br>14:00 | 16:00 | 18:00</li>
 						<li>SALA 2<br><br>15:00 | 17:00 | 19:00</li>
 					</ul>
-					<button>Comprar ingressos</button>
+					<button>Comprar ingressos</button> 
 				</li>
 				<li>
 					<h3>JOHN WICK 4: BABA YAGA</h3>
@@ -64,6 +66,25 @@
 					<ul>
 						<li>SALA 1<br><br>22:00</li>
 						<li>SALA 4<br><br>14:30 | 16:45 | 21:45</li>
+					</ul>
+					<button>Comprar ingressos</button>
+				</li>
+				<li>
+					<h3>O URSO DO PÓ BRANCO</h3>
+					<p>Classificação: 18 anos</p>
+					<p>Duração: 1h35min</p>
+					<ul>
+						<li>SALA 3<br><br>13:20</li>
+					</ul>
+					<button>Comprar ingressos</button>
+				</li>
+				<li>
+					<h3>DUNGEONS & DRAGONS: HONRA ENTRE REBELDES</h3>
+					<p>Classificação: 12 anos</p>
+					<p>Duração: 2h10min</p>
+					<ul>
+						<li>SALA 2<br><br>19:30 | 21:00</li>
+						<li>SALA 5<br><br>18:30 | 21:30</li>
 					</ul>
 					<button>Comprar ingressos</button>
 				</li>
