--- a/vscode/home.html
+++ b/vscode/home.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 	<header>
-		<div class="logo">CINE NOG</div>
+		<div class="logo"><img src="logo.png"></div>
 		<nav>
 			<ul>
-				<li><a href="#"><strong>FILMES EM CARTAZ</strong></a></li>
-				<li><a href="#"><strong>INGRESSOS E PREÇOS</strong></a></li>
-				<li><a href="#"><strong>LOCAIS E HORÁRIOS</strong></a></li>
-				<li><a href="#"><strong>MINHA CONTA</strong></a></li>
-				<li><a href="#"><strong>SOBRE NÓS</strong></a></li>
-				<li><a href="login.html"><strong>LOGOUT</strong></a></li>
+				<li><a href="#"><strong><i>FILMES EM CARTAZ</i></strong></a></li>
+				<li><a href="#"><strong><i>INGRESSOS E PREÇOS</i></strong></a></li>
+				<li><a href="#"><strong><i>LOCAIS E HORÁRIOS</i></strong></a></li>
+				<li><a href="#"><strong><i>MINHA CONTA</i></strong></a></li>
+				<li><a href="#"><strong><i>SOBRE NÓS</i></strong></a></li>
+				<li><a href="login.html"><strong><i>LOGOUT</i></strong></a></li>
 			</ul>
 		</nav>
 	</header>
