--- a/vscode/cadastro.html
+++ b/vscode/cadastro.html
@@ -8,6 +8,7 @@
     <body>
         <section>
             <div class="form-box">
+                <img src="logo2.png" alt="logo">
                 <div class="form-value">
                     <form action="home.html">
                         <h2>Cadastro</h2>
