--- a/vscode/home.html
+++ b/vscode/home.html
@@ -5,12 +5,15 @@
 	<title>Cine Nog</title>
 	<link rel="stylesheet" type="text/css" href="stylehome.css">
 </head>
+
+
+
 <body>
 	<header>
 		<div class="logo"><img src="logo.png"></div>
 		<nav>
 			<ul>
-				<li><a href="#"><strong><i>FILMES EM CARTAZ</i></strong></a></li>
+				<li><a href="https://letterboxd.com/nogzinho/list/filmes-em-cartaz/"><strong><i>FILMES EM CARTAZ</i></strong></a></li>
 				<li><a href="#"><strong><i>INGRESSOS E PREÇOS</i></strong></a></li>
 				<li><a href="#"><strong><i>LOCAIS E HORÁRIOS</i></strong></a></li>
 				<li><a href="#"><strong><i>MINHA CONTA</i></strong></a></li>
@@ -30,6 +33,13 @@
             <p>A gente tenta não alterar mas, se acontecer alguma coisa importante, essa programação pode mudar! Fique ligad​o.</p>
 			<ul>
 				<li>
+					<div class="flip-card">
+						<div class="flip-card-inner">
+						  <div class="flip-card-front">
+							<img src="marioposter.jpg" alt="Avatar" style="width:300px;height:420px;">
+						  </div>
+						</div>
+					  </div>
 					<h3>SUPER MARIO BROS.: O FILME</h3>
 					<p>Classificação: Livre</p>
 					<p>Duração: 1h32min</p>
@@ -40,6 +50,13 @@
 					<button>Comprar ingressos</button> 
 				</li>
 				<li>
+					<div class="flip-card">
+						<div class="flip-card-inner">
+						  <div class="flip-card-front">
+							<img src="johnwick4.jpg" alt="Avatar" style="width:300px;height:420px;">
+						  </div>
+						</div>
+					  </div>
 					<h3>JOHN WICK 4: BABA YAGA</h3>
 					<p>Classificação: 16 anos</p>
 					<p>Duração: 2h49min</p>
@@ -50,6 +67,13 @@
 					<button>Comprar ingressos</button>
 				</li>
                 <li>
+					<div class="flip-card">
+						<div class="flip-card-inner">
+						  <div class="flip-card-front">
+							<img src="shazam2.jpg" alt="Avatar" style="width:300px;height:420px;">
+						  </div>
+						</div>
+					  </div>
 					<h3>SHAZAM! FÚRIA DOS DEUSES</h3>
 					<p>Classificação: 12 anos</p>
 					<p>Duração: 2h10min</p>
@@ -59,6 +83,13 @@
 					<button>Comprar ingressos</button>
 				</li>
                 <li>
+					<div class="flip-card">
+						<div class="flip-card-inner">
+						  <div class="flip-card-front">
+							<img src="papa.jpg" alt="Avatar" style="width:300px;height:420px;">
+						  </div>
+						</div>
+					  </div>
 					<h3>O EXORCISTA DO PAPA</h3>
 					<p>Classificação: 16 anos</p>
 					<p>Duração: 1h43min</p>
@@ -69,6 +100,13 @@
 					<button>Comprar ingressos</button>
 				</li>
 				<li>
+					<div class="flip-card">
+						<div class="flip-card-inner">
+						  <div class="flip-card-front">
+							<img src="cocainebear.jpg" alt="Avatar" style="width:300px;height:420px;">
+						  </div>
+						</div>
+					  </div>
 					<h3>O URSO DO PÓ BRANCO</h3>
 					<p>Classificação: 18 anos</p>
 					<p>Duração: 1h35min</p>
@@ -78,6 +116,13 @@
 					<button>Comprar ingressos</button>
 				</li>
 				<li>
+					<div class="flip-card">
+						<div class="flip-card-inner">
+						  <div class="flip-card-front">
+							<img src="dungeons.jpg" alt="Avatar" style="width:300px;height:420px;">
+						  </div>
+						</div>
+					  </div>
 					<h3>DUNGEONS & DRAGONS: HONRA ENTRE REBELDES</h3>
 					<p>Classificação: 12 anos</p>
 					<p>Duração: 2h10min</p>
