--- a/vscode/home.html
+++ b/vscode/home.html
@@ -133,6 +133,23 @@
 		</section>
 	</main>
     <br><br>
+	<h2>USUÁRIOS CADASTRADOS</h2>
+	<table class="users-table"> <!-- Adicione a classe "users-table" à tabela -->
+	  <thead>
+		<tr>
+		  <th>ID</th>
+		  <th>Nome</th>
+		  <th>Email</th>
+		</tr>
+	  </thead>
+	  <tbody>
+		<!-- Use uma estrutura de loop ou código dinâmico para gerar as linhas de dados -->
+		<tr>
+		  <td></td>
+		  <td></td>
+		  <td></td>
+		</tr>
+	<br><br>	
 	<footer>
 		<div class="endereco">Utilizamos seus dados para analisar e personalizar nossos conteúdos e anúncios durante a sua navegação em nosso site e em serviços de terceiros parceiros.</div>
         <div class="telefone">Telefone: (21) 4002-8922 | E-mail: contado@cinenog.com</div>
