--- a/vscode/home.html
+++ b/vscode/home.html
@@ -11,7 +11,7 @@
 		<nav>
 			<ul>
 				<li><a href="https://letterboxd.com/nogzinho/list/filmes-em-cartaz/"><strong><i>FILMES EM CARTAZ</i></strong></a></li>
-				<li><a href="#"><strong><i>INGRESSOS E PREÇOS</i></strong></a></li>
+				<li><a href="https://www.ingresso.com/home?city=itaborai&partnership=home"><strong><i>INGRESSOS E PREÇOS</i></strong></a></li>
 				<li><a href="#"><strong><i>LOCAIS E HORÁRIOS</i></strong></a></li>
 				<li><a href="#"><strong><i>MINHA CONTA</i></strong></a></li>
 				<li><a href="#"><strong><i>SOBRE NÓS</i></strong></a></li>
@@ -22,6 +22,7 @@
 	<main>
 		<div class="banner">
 			<h2>DESTAQUE DA SEMANA</h2>
+			<br>
 			<p>O REINO DOS COGUMELOS ESTÁ EM PERIGO!</p>
 			<img src="mario.jpeg">
 		</div>
@@ -30,13 +31,7 @@
             <p>A gente tenta não alterar mas, se acontecer alguma coisa importante, essa programação pode mudar! Fique ligad​o.</p>
 			<ul>
 				<li>
-					<div class="flip-card">
-						<div class="flip-card-inner">
-						  <div class="flip-card-front">
-							<img src="marioposter.jpg" alt="Avatar" style="width:300px;height:420px;">
-						  </div>
-						</div>
-					  </div>
+					<img src="marioposter.jpg" alt="Avatar" style="width:300px;height:420px;">
 					<h3>SUPER MARIO BROS.: O FILME</h3>
 					<p>Classificação: Livre</p>
 					<p>Duração: 1h32min</p>
@@ -47,85 +42,45 @@
 					<button>Comprar ingressos</button> 
 				</li>
 				<li>
-					<div class="flip-card">
-						<div class="flip-card-inner">
-						  <div class="flip-card-front">
-							<img src="johnwick4.jpg" alt="Avatar" style="width:300px;height:420px;">
-						  </div>
-						</div>
-					  </div>
+					<img src="johnwick4.jpg" alt="Avatar" style="width:300px;height:420px;">
 					<h3>JOHN WICK 4: BABA YAGA</h3>
 					<p>Classificação: 16 anos</p>
 					<p>Duração: 2h49min</p>
 					<ul>
-						<li>SALA 3<br><br>20:30</li>
-						<li>SALA 5<br><br>16:30 | 20:00</li>
+						<li>SALA 2<br><br>21:00</li>
+						<li>SALA 4<br><br>19:30</li>
 					</ul>
 					<button>Comprar ingressos</button>
 				</li>
                 <li>
-					<div class="flip-card">
-						<div class="flip-card-inner">
-						  <div class="flip-card-front">
-							<img src="shazam2.jpg" alt="Avatar" style="width:300px;height:420px;">
-						  </div>
-						</div>
-					  </div>
-					<h3>SHAZAM! FÚRIA DOS DEUSES</h3>
-					<p>Classificação: 12 anos</p>
-					<p>Duração: 2h10min</p>
+					<img src="suzume.jpg" alt="Avatar" style="width:300px;height:420px;">
+					<h3>SUZUME</h3>
+					<p>Classificação: Livre</p>
+					<p>Duração: 2h2min</p>
 					<ul>
-						<li>SALA 5<br><br>14:00</li>
+						<li>SALA 4<br><br>14:30 | 17:00</li>
 					</ul>
 					<button>Comprar ingressos</button>
 				</li>
                 <li>
-					<div class="flip-card">
-						<div class="flip-card-inner">
-						  <div class="flip-card-front">
-							<img src="papa.jpg" alt="Avatar" style="width:300px;height:420px;">
-						  </div>
-						</div>
-					  </div>
+					<img src="papa.jpg" alt="Avatar" style="width:300px;height:420px;">
 					<h3>O EXORCISTA DO PAPA</h3>
 					<p>Classificação: 16 anos</p>
 					<p>Duração: 1h43min</p>
 					<ul>
 						<li>SALA 1<br><br>22:00</li>
-						<li>SALA 4<br><br>14:30 | 16:45 | 21:45</li>
+						<li>SALA 5<br><br>16:45 | 18:55</li>
 					</ul>
 					<button>Comprar ingressos</button>
 				</li>
 				<li>
-					<div class="flip-card">
-						<div class="flip-card-inner">
-						  <div class="flip-card-front">
-							<img src="cocainebear.jpg" alt="Avatar" style="width:300px;height:420px;">
-						  </div>
-						</div>
-					  </div>
-					<h3>O URSO DO PÓ BRANCO</h3>
-					<p>Classificação: 18 anos</p>
-					<p>Duração: 1h35min</p>
-					<ul>
-						<li>SALA 3<br><br>13:20</li>
-					</ul>
-					<button>Comprar ingressos</button>
-				</li>
-				<li>
-					<div class="flip-card">
-						<div class="flip-card-inner">
-						  <div class="flip-card-front">
-							<img src="dungeons.jpg" alt="Avatar" style="width:300px;height:420px;">
-						  </div>
-						</div>
-					  </div>
+					<img src="dungeons.jpg" alt="Avatar" style="width:300px;height:420px;">
 					<h3>DUNGEONS & DRAGONS: HONRA ENTRE REBELDES</h3>
 					<p>Classificação: 12 anos</p>
 					<p>Duração: 2h10min</p>
 					<ul>
-						<li>SALA 2<br><br>19:30 | 21:00</li>
-						<li>SALA 5<br><br>18:30 | 21:30</li>
+						<li>SALA 3<br><br>16:15 | 19:00 | 21:45</li>
+						<li>SALA 5<br><br>14:05 | 21:05</li>
 					</ul>
 					<button>Comprar ingressos</button>
 				</li>
@@ -134,21 +89,20 @@
 	</main>
     <br><br>
 	<h2>USUÁRIOS CADASTRADOS</h2>
-	<table class="users-table"> <!-- Adicione a classe "users-table" à tabela -->
+	<table class="users-table"> 
 	  <thead>
 		<tr>
-		  <th>ID</th>
-		  <th>Nome</th>
+		  <th>Usuário</th>
 		  <th>Email</th>
 		</tr>
 	  </thead>
 	  <tbody>
-		<!-- Use uma estrutura de loop ou código dinâmico para gerar as linhas de dados -->
 		<tr>
 		  <td></td>
 		  <td></td>
-		  <td></td>
 		</tr>
+	  </tbody>
+	</table>
 	<br><br>	
 	<footer>
 		<div class="endereco">Utilizamos seus dados para analisar e personalizar nossos conteúdos e anúncios durante a sua navegação em nosso site e em serviços de terceiros parceiros.</div>
